# mod

./: README.md  config.json  index.html  main.js
motor/: Cargo.toml  config.rs  manager.rs
motor/src/: config.rs  kiss.rs  lib.rs  manager.rs  message.rs  motor.rs  serial.rs
motorserver/: Cargo.toml  config.json
motorserver/src/: main.rs
server/: Cargo.toml  config.json
server/motor_clean/: motor_clean.ino  types.cpp  types.h
server/motor_control_2/: motor_control_2.ino
server/src/: .control.rs.rustfmt  .main.rs.rustfmt  arm.rs  client.rs  control.rs  controller.rs  main.rs  module.rs  rec_main.rs
sketch_feb13a/: sketch_feb13a.ino
utility/: control.py  requirements.txt  utility.py
utility/templates/: fine.html  index.html
