[package]
name = "motor"
version = "0.1.0"
authors = ["Mitchell Bruckner <mbruckner807@gmail.com>"]
edition = "2018"

[features]
nonmanager = ["serde", "serde_json", "serial", "regex"]
clientmanager = ["reqwest", "hyper", "futures", "tokio"]
default = ["nonmanager"]

[dependencies]
serial = { version =  "*", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
regex = { version = "*", optional = true }
reqwest = { version = "0.9.18", optional = true }
hyper = { version = "0.12", optional=true }
futures = { versiont = "*", optional=true }
tokio = { versiont = "*", optional=true, default-features=false, features=["rt-full", "sync"]}
